2006-11-01  John W. Eaton  <jwe@octave.org>

	* run-octave.in: Handle quoted args properly in exec call?

2006-10-29  John W. Eaton  <jwe@octave.org>

	* run-octave.in: Handle spaces in directory names.

2006-10-28  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in (AH_BOTTOM): If using MSVC, define __WIN32__ before
	other #ifdefs that use it.

2006-10-27  John W. Eaton  <jwe@octave.org>

	* configure.in (AH_BOTTOM): Move DLL defs to
	libcruft/misc/oct-dlldefs.h and include it here.

	* aclocal.m4 (OCTAVE_PROG_TEXI2PDF): Require OCTAVE_PROG_TEXI2DVI.
	If texi2pdf is not found but texi2dvi is available, set TEXI2PDF
	to "$TEXI2DVI --pdf".
	(OCTAVE_PROG_GHOSTSCRIPT): Also check for gswin32 on Windows systems.

	* Makeconf.in (UNSETCOMSPEC): Define if COMSPEC is defined.
	From Michael Goffioul <michael.goffioul@swing.be>.

2006-10-26  John W. Eaton  <jwe@octave.org>

	* configure.in (OCTAVE_EXPORT, OCTAVE_IMPORT): New macros
	(CRUFT_API, OCTAVE_API, OCTINTERP_API): Define using OCTAVE_EXPORT
	and OCTAVE_IMPORT.

2006-10-26  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in (*-*-msdosmsvc): Set library_path_var.
	Check for _WIN32_WINNT >= 0x0403.  Define _USE_MATH_DEFINES if it
	is needed.
	(XTRA_CRUFT_LINK_DEPS): New variable.  Substitute it.

	* aclocal.m4 (OCTAVE_MKDIR_TAKES_ONE_ARG): Perform check with C++
	compiler.

2006-10-26  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_PAGER): Also check for more.com for
	*-*-mingw* and *-*-msdosmsvc systems.

	* configure.in (F77_TOLOWER, F77_APPEND_UNDERSCORE,
	F77_APPEND_EXTRA_UNDERSCORE): New variables.  Substitute them.
	* Makeconf.in (F77_TOLOWER, F77_APPEND_UNDERSCORE,
	F77_APPEND_EXTRA_UNDERSCORE): Substitute here.
	(do-subst-f77-mangling): New macro.

	* emacs/octave-inf.el (inferior-octave-has-built-in-variables):
	New defvar.
	(inferior-octave-resync-dirs): Check to see whether Octave has
	built-in variables and set inferior-octave-has-built-in-variables.